# Unofficial-Urho3DPlayer

./: CMakeLists.txt  LICENSE  README.md
Source/01_TestPlugin/: 01_TestPlugin.cpp  01_TestPlugin.h  CMakeLists.txt  PluginInfo.h  PluginLog.h
Source/02_TestPlugin/: 02_TestPlugin.cpp  02_TestPlugin.h  CMakeLists.txt  PluginInfo.h
Source/Template/: PluginApplication.cpp  PluginApplication.h  PluginLog.h
Source/Urho3DPlayer/: CMakeLists.txt  Info.h  Plugin.cpp  Plugin.h  PluginAPI.cpp  PluginAPI.h  Urho3DPlayer.cpp  Urho3DPlayer.h
